fixed link feature, changed spacing between home page links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,9 +355,11 @@ footer {
 
 @media screen and (max-width: 720px) {
     #image-container {
-        display: none;
+        display:none;
+        }
+        
     }
-}
+
 
 /*------------------Media query for homepage text--*/
 
@@ -390,7 +392,7 @@ footer {
         letter-spacing: 0.2em;
         color:black;
         padding-bottom: 80px;
-        margin-bottom: 200px;
+        margin-bottom: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
